--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,10 @@ reobotnet:
 	client:
 		address:
 			url: http://localhost:8082/addresses
-			
+
+
+spring:
+	data:
+		mongodb:
+			uri: mongodb://localhost:27017/hexagonal
 			 
