--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,17 @@
-spring.application.name=hexagonal
-
-reobotnet:
-	client:
-		address:
-			url: http://localhost:8082/addresses
-
+server:
+ port: 8081
 
 spring:
-	data:
-		mongodb:
-			uri: mongodb://localhost:27017/hexagonal
+ data:
+  mongodb:
+   host: localhost
+   port: 27017
+   authentication-database: admin
+   username: root
+   password: example
+   database: hexagonal
 
-
+reobotnet:
+ client:
+  address:
+   url: http://localhost:8082/addresses
